2007-01-04  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpRequest.cs: fixed IsLocal, should check all ip addresses of host

2007-01-05  Marek Habersack  <grendello@gmail.com>

	* HttpApplicationFactory.cs: Use the new app resources compiler.

	* HttpRuntime.cs: Use the new app resources compiler.

	* HttpContext.cs: Reimplement the GetGlobalResourceObject
	methods, implement the GetLocalResourceObject methods.

	* HttpResponse.cs: Implement the HeaderEncoding property.

2007-01-04  Andreia Gaita  <avidigal@novell.com>

	* HttpRuntime.cs: Add check for NET_2_0 when initializing
	WebConfigurationManager, build failing on 1.1 profile
	
2007-01-04  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpApplicationFactory.cs, HttpRuntime.cs: WebConfigurationManager
	should be initializaed before any possible access to it

2007-01-04  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpRequest.cs: fixed Path property, add call of
	Uri.UnescapeDataString in net_2_0

2007-01-04  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpApplication.cs: fixed PreStart, should not set thread culture
	to invariant

2007-01-03  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpRequest.cs: fixed jvm version of MakeInputStream, should not
	throw exception on zero content length

2007-01-03  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SiteMap.cs, SiteMapNodeCollection.cs: TARGET_JVM of static members

2006-12-20  Marek Habersack  <grendello@gmail.com>

	* HttpContext.cs: add internal setter for the Profile property.

	* HttpApplicationFactory.cs: Added a shortcut version of
	InvokeSessionEnd for use from the 2.0 SessionState code.

2006-12-18  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpRequest.cs: fixed Path property, returns unescaped url

2006-12-16  Marek Habersack  <grendello@gmail.com>

	* HttpRequest.cs: Fix for http exception during first visit to an
	application when the visit path is not the app's virtual root.

2006-12-12 Igor Zelmanovich <igorz@mainsoft.com>
